# rust-chess

./: Cargo.toml  shell.nix
src/: board.rs  gui.rs  main.rs
